# web-tree-sitter-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js  webdriver.json
.github/workflows/: main.yaml
assets/: tree-sitter-javascript.wasm
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/wasm_bindgen/cast/: trait.JsCast.js
implementors/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js  trait.RefFromWasmAbi.js
implementors/wasm_bindgen/describe/: trait.WasmDescribe.js
src/: lib.rs
src/web_tree_sitter_sys/: lib.rs.html
tests/: NOTES.md
tests/node/: edit.rs  language.rs  main.rs  parse_options.rs  parser.rs  point.rs  predicate_operand.rs  predicate_result.rs  query.rs  query_capture.rs  query_match.rs  range.rs  syntax_node.rs  tree.rs  tree_cursor.rs  util.rs
tests/node/util/: language.rs  parser.rs  syntax_node.rs  tree.rs
web_tree_sitter_sys/: all.html  index.html  sidebar-items.js  struct.Edit.html  struct.Language.html  struct.LanguageError.html  struct.LoggerParams.html  struct.ParseOptions.html  struct.Parser.html  struct.ParserError.html  struct.Point.html  struct.PredicateOperand.html  struct.PredicateResult.html  struct.Query.html  struct.QueryCapture.html  struct.QueryError.html  struct.QueryMatch.html  struct.Range.html  struct.SyntaxNode.html  struct.Tree.html  struct.TreeCursor.html  struct.TreeSitter.html  type.Input.html  type.InputClosureType.html  type.Logger.html  type.LoggerClosureType.html
xtask/: Cargo.toml
xtask/src/: main.rs
