[package]
edition = "2018"
name = "web-tree-sitter-sys"
version = "0.1.0"
authors = ["<hvithrafn@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/hvithrafn/web-tree-sitter-sys"
description = """
Raw bindings to the tree-sitter-web API.
"""

[badges]
maintenance = { status = "experimental" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "=0.2.70", features = ["strict-macro"] }

[dependencies.web-sys]
version = "0.3"

[dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
